Closed Bug 1247041 Opened 9 years ago Closed 9 years ago

This video SIGSEGVs firefox

Categories

(Core :: Audio/Video: Playback, defect, P1)

44 Branch
x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox44 --- wontfix
firefox45 + fixed
firefox46 --- fixed
firefox47 --- fixed

People

(Reporter: nagisa, Assigned: jya)

References

Details

Attachments

(3 files)

Attached video SIGSEGV payload
Playing the attached video will reliably SIGSEGV firefox, it looks like somewhere inside ffmpeg. ffplay and mpv (uses ffmpeg) do not suffer from this. I’ll add the backtrace and stdout in next comment (*goes to sigsegv the browser more*).
The output: [h264 @ 0x7f37a9daa800] get_format() cannot be called after ff_thread_finish_setup() [h264 @ 0x7f37a9daa800] get_format() cannot be called after ff_thread_finish_setup() [h264 @ 0x7f37a9daa800] decode_slice_header error Assertion !h->setup_finished failed at libavcodec/h264_slice.c:1168 Redirecting call to abort() to mozalloc_abort fish: “firefox” terminated by signal SIGSEGV (Address boundary error) The stacktrace is uninteresting (no debug symbols)
Flags: needinfo?(jyavenard)
Which version of libavcodec do you have installed?
$ pacman -Qs libavcodec local/ffmpeg 1:2.8.6-2 Complete solution to record, convert and stream audio and video
Flags: needinfo?(jyavenard)
(Oh, I realize I cleared out the needinfo which wasn’t for me, but since you needinfo-d yourself, I assume you meant to needinfo me.
ffmpeg --version reports this: libavcodec 56. 60.100 / 56. 60.100
No, I ni? myself so I don't forget :)
Assignee: nobody → jyavenard
See Also: → 1233340
[Tracking Requested - why for this release]: In bug 1233340 we added support for some YUVJ420P (12bppp YUV420) however this causes crashing with some version of FFmpeg.
Anthony, I tested with LibAV 0.8 up to FFmpeg master ; on both linux and mac. this new method works fine with bug 1233340 and this video. Interestingly, I had copied the PixelFormat method of LibAV, and assigning PIX_FMT_YUV420P is what they do when it's YUVJ420P
Priority: -- → P1
Firefox 44 is affected too.
Comment on attachment 8717752 [details] MozReview Request: Bug 1247041: [ffmpeg] Request YUVJ420P format explicitly. r?kentuckyfriedtakahe Review request updated; see interdiff: https://reviewboard.mozilla.org/r/34293/diff/1-2/
sorry, I was playing with mozreview..
See Also: → 1247189
Comment on attachment 8717752 [details] MozReview Request: Bug 1247041: [ffmpeg] Request YUVJ420P format explicitly. r?kentuckyfriedtakahe https://reviewboard.mozilla.org/r/34293/#review31523
Attachment #8717752 - Flags: review?(ajones) → review+
Tracking to make sure we uplift it in 45.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
Comment on attachment 8717752 [details] MozReview Request: Bug 1247041: [ffmpeg] Request YUVJ420P format explicitly. r?kentuckyfriedtakahe Approval Request Comment [Feature/regressing bug #]:1247041 [User impact if declined]: Crashes [Describe test coverage new/current, TreeHerder]: In central, manual test. [Risks and why]: Low, the patch is simple and it was verified against all versions of LibAV and FFmpeg [String/UUID change made/needed]: none Patch will not port to beta it requires a small modification. Will provide it soon
Attachment #8717752 - Flags: approval-mozilla-beta?
Attachment #8717752 - Flags: approval-mozilla-aurora?
Comment on attachment 8717752 [details] MozReview Request: Bug 1247041: [ffmpeg] Request YUVJ420P format explicitly. r?kentuckyfriedtakahe Fixes a video playback issue (crash), seems like a simple fix. Let's uplift to Aurora46.
Attachment #8717752 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
This missed beta 7. Do you have an eta for the beta-rebased patch? Thanks
Flags: needinfo?(jyavenard)
(In reply to Sylvestre Ledru [:sylvestre] from comment #20) > This missed beta 7. Do you have an eta for the beta-rebased patch? Thanks Oh... miscommunication here, as the beta uplift hadn't been approved, I didn't look into it (it will take me two minutes to make the change)
Flags: needinfo?(jyavenard)
Sylvestre. Now that the patch for beta is available, will you allow this on?
Flags: needinfo?(sledru)
Comment on attachment 8721101 [details] [diff] [review] [ffmpeg] Request YUVJ420P format explicitly. r=kentuckyfriedtakahe, a=sylvestre [Triage Comment] Yes, should be in 45 beta 9
Flags: needinfo?(sledru)
Attachment #8721101 - Flags: approval-mozilla-beta+
Attachment #8717752 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: