Bug 1247041: [ffmpeg] Request YUVJ420P format explicitly. r=kentuckyfriedtakahe

Requesting YUV420P causes crashes with some version of FFmpeg.

MozReview-Commit-ID: I69jNZ64Le5